[package]
name = "hackmd-api-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", default-features = false, features = ["serde"] }
false = "0.0.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
